--- a/nx.json
+++ b/nx.json
@@ -14,12 +14,7 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
@@ -31,5 +26,19 @@
       }
     ]
   },
-  "projects": {}
+  "projects": {
+    "file-tree": {
+      "tags": [],
+      "implicitDependencies": ["icons", "models", "utils"]
+    },
+    "icons": {
+      "tags": []
+    },
+    "models": {
+      "tags": []
+    },
+    "utils": {
+      "tags": []
+    }
+  }
 }
