--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@aft/icons": ["libs/icons/src/index.ts"],
+      "@aft/models": ["libs/models/src/index.ts"],
+      "@aft/ng-utils": ["libs/ng-utils/src/index.ts"],
+      "@aft/utils": ["libs/utils/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
